# codeweaver

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_federation/consensus_protocol/: raft_consensus.py
cognitive_engine/knowledge_graph/: code_graph.py
examples/framework_migration/: README.md
examples/legacy_modernization/: README.md
examples/monolith_to_microservices/: README.md
observability/dashboard/: app.py
observability/token_telemetry/: collector.py
perception_layer/ast_parser/: parser.py
perception_layer/control_flow_analyzer/: analyzer.py
perception_layer/data_flow_tracker/: tracker.py
